--- a/style.css
+++ b/style.css
@@ -82,8 +82,18 @@ html, body {
   max-width: 100%;
   overflow-x: hidden;
 }
-#editor {
+#editor, #editor2 {
   box-shadow: -5px 0 5px -5px #333;
+}
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ #editor, #editor2, .menu::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#editor, #editor2, .menu {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .ace-cursor {
